--- a/pomify/package.json
+++ b/pomify/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
+    "@prisma/client": "^3.9.2",
     "lodash": "^4.17.21",
     "next": "latest",
     "next-auth": "^4.0.0-beta.7",
@@ -27,6 +28,7 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
+    "prisma": "^3.9.2",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
