--- a/pomify/.env
+++ b/pomify/.env
@@ -4,4 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB (Preview) and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://development:development@localhost:5432/pomify?schema=public"
+
+PGHOST=localhost
+PGUSER=development
+PGDATABASE=pomify
+PGPASSWORD=development
+PGPORT=5432
